# namada

./: .dockerignore  .drone.yml  .earthlyignore  .env  .gitignore  .mergify.yml  102bc601daaab4571a932c13d32a4d3b4c2b848abfc06f2050ac3697c26f24fe-code.tx  102bc601daaab4571a932c13d32a4d3b4c2b848abfc06f2050ac3697c26f24fe-data.tx  AML_crypto.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Earthfile  LICENSE  Makefile  README.md  VERSIONING.md  about.hbs  about.toml  clippy.toml  codecov.yml  default.nix  docker-compose.yml  fix_max_tx_bytes.json  flake.nix  global-config.toml  patch  release.toml  rust-nightly-version  rust-toolchain  rust-toolchain.toml  rustfmt.toml  shell.nix  update-pgf-docs
account/: Cargo.toml
account/src/: lib.rs  storage_key.rs
apps/: Cargo.toml  build.rs
benches/: Cargo.toml  README.md  host_env.rs  lib.rs  mod.rs  native_vps.rs  process_wrapper.rs  txs.rs  vps.rs
core/: Cargo.toml  build.rs
core/examples/: validator_set_update.rs
core/src/: bytes.rs  hints.rs  lib.rs
encoding_spec/: Cargo.toml  README.md
encoding_spec/src/: main.rs
ethereum_bridge/: Cargo.toml
ethereum_bridge/src/: bridge_pool_vp.rs  lib.rs  parameters.rs  test_utils.rs  vp.rs
examples/: Cargo.toml  README.md  fix.rs  generate_parser.rs  generate_txs.rs  housefire-max-tx-bytes.rs  make-db-migration.rs  migration_example.json  shielded_rewards.rs  tx_schema.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_txs_mempool.rs  txs_finalize_block.rs  txs_mempool.rs  txs_prepare_proposal.rs  txs_process_proposal.rs  txs_wasm_run.rs
ibc/: Cargo.toml
ibc/src/: lib.rs  storage.rs
ledger/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  intent_data_a.json  intent_data_b.json
ledger/src/: main.rs
ledger/vm/: .gitignore  Cargo.toml
ledger/vm_env/: Cargo.toml
light_sdk/: Cargo.toml
light_sdk/src/: lib.rs  main.rs
matchmaker_template/: .gitignore  Cargo.toml  Makefile  README.md  matchmaker.wasm
matchmaker_template/src/: lib.rs
merkle_tree/: Cargo.toml
merkle_tree/src/: eth_bridge_pool.rs  lib.rs
parameters/: Cargo.toml
parameters/src/: lib.rs  storage.rs
proof_of_stake/: Cargo.toml  applying_rewards_to_voting_power.md
proof_of_stake/proptest-regressions/: tests.txt
proof_of_stake/src/: btree_set.rs  epoched.rs  epoched_new.rs  error.rs  lib.rs  parameters.rs  pos_queries.rs  queries.rs  rewards.rs  slashing.rs  storage.rs  storage_key.rs  tests.rs  types.rs  validation.rs  validator_set_update.rs
sdk/: Cargo.toml
sdk/src/: args.rs  error.rs  io.rs  lib.rs  masp.rs  rpc.rs  signing.rs  tx.rs
shared/: Cargo.toml  build.rs  release.toml
shared/src/: bytes.rs  io.rs  lib.rs  token.rs  vm_memory.rs
shielded_token/: Cargo.toml
shielded_token/src/: conversion.rs  lib.rs  storage.rs  storage_key.rs  utils.rs
state/: Cargo.toml
state/src/: lib.rs  mockdb.rs  traits.rs  tx_queue.rs  wl_storage.rs  write_log.rs
storage/: Cargo.toml
storage/src/: db.rs  lib.rs  mockdb.rs  tx_queue.rs
tests/: Cargo.toml
tests/src/: e2e.rs  integration.rs  lib.rs  storage.rs  strings.rs  vm_host_env.rs
trans_token/: Cargo.toml
trans_token/src/: lib.rs  storage.rs  storage_key.rs
tx/: Cargo.toml  build.rs
tx/src/: lib.rs  types.rs
tx_prelude/: Cargo.toml
tx_prelude/src/: account.rs  error.rs  ibc.rs  (+8 more)
tx_template/: .gitignore  Cargo.toml  README.md  tx.wasm
vm_env/: Cargo.toml
vote_ext/: Cargo.toml
vp_prelude/: Cargo.toml
wasm/: Cargo.toml  Dockerfile  Makefile  checksums.json  checksums.py  gas.json  gas_checksums.json  mm_filter_token_exch.wasm  mm_token_exch.wasm  release.toml  rust-toolchain  rust-toolchain.toml  tx_become_validator.09ecfa62c364cefbf668dfdf4d4f5f28a997dce73f2300f652cf44145576840e.wasm  tx_become_validator.4494e9d9ccb4189382cda015065aa78c46cf1cadbbbe5eb12f8edfd20cf00e6c.wasm  tx_become_validator.5f6df3b9c9fe19f48543fa6f29aef546b77324ae4a3501850ee4171c8659519f.wasm  tx_bond.77f0b714c5186f455d2199e49804e58f2422826c31492f9285ffa8777ed6208d.wasm  tx_bond.787d19f9557652feac205df79b205f9c944e8d859429402fa7479046fb9f0728.wasm  tx_bond.92971254903001075dff90041142374bd1d715374e1cfa21b18cd1a4dc6211d0.wasm  tx_bond.d4180b8838a857ffb290dceecba1ec85185dc947cff70c6244aba129e0b92a52.wasm  tx_bond.wasm  tx_bridge_pool.48a34aad32c4e193eacc8a85d4e1a08ba6909dc0cd3a69668154eda1ba67ca9f.wasm  tx_bridge_pool.c18b92b627d7b30309e1d95d20e005d60426544dfaa136405846f88dd9e5ad42.wasm  tx_bridge_pool.c3e9f365c2463c11816ec452903669c8ada46688c7c77bf4b5e10a7e76faf12d.wasm  tx_change_consensus_key.0af8f3447c53c78c337a87aa8ac430753eaafa85673359489a5439f8051eb66f.wasm  tx_change_consensus_key.5e42acf3db5a161231fd6d5888333289adcbae615f4fc97d2a19aa6d9fc47e59.wasm  tx_change_consensus_key.cc828b9a0ef335e5ac7ea38e6c7a60f86978eef3bc631d7fc0d39533fc4c8651.wasm  tx_change_validator_commission.08dfa56887b33c76b3467db1f530f99010f936147e106f7b8a7cd5cc062262a9.wasm  tx_change_validator_commission.4ffc3fc58189580d5cc995053ee8c391b8005b1a4b4bd2cd3be800251133d7bb.wasm  tx_change_validator_commission.928ecee695c949528ec32b731ffd70980a926e1311b10a4e468331338d55c35c.wasm  tx_change_validator_commission.ac407d1d4c93c3513ecea91c7569c54c7e5bd5bda316369b435469ad0e42bce2.wasm  tx_change_validator_metadata.14ac3f5b4b6dd3330b2901b340ab68984774b464dc0c2f6ad0bc992fee9f3e9e.wasm  tx_change_validator_metadata.30c07692fefd78ffc9c4e7db6bd611e1b6a1f8d1605895635604fa848dcb36b7.wasm  tx_change_validator_metadata.6b5f81cf0e730ce628918e5a4a044c4d593e49528f7e2016bcba6c19a28b8aa6.wasm  tx_claim_rewards.7b29c123462c84bf3a8ce97941fb3948c29f64a3cdbe59acc5fe6ef1c4d673dc.wasm  tx_claim_rewards.967a8253233965cf72ac9ab9189d142e836469674336e26a25aceb506352aa70.wasm  tx_claim_rewards.c5d749cb66615bef07ebd4761f73765d6fa869210575840ebaff405e65dff35d.wasm  tx_deactivate_validator.154a2a2d0cb9e89fbc103390042313562f2886a754c1d20d49f68de2b88acb3c.wasm  tx_deactivate_validator.97560716d66380910f65aa8d7d96fcab1239781a7b6f0fd4d817b9ab50856820.wasm  tx_deactivate_validator.e4b9815efcd066e6024e8fe77e2cfc640968df2da929f1386c753d8ae1ee4f7f.wasm  tx_from_intent.wasm  (+82 more)
(+3775 files in other folders)
