[workspace]
resolver = "2"

members = [
  "crates/account",
  "crates/apps",
  "crates/apps_lib",
  "crates/benches",
  "crates/controller",
  "crates/core",
  "crates/encoding_spec",
  "crates/ethereum_bridge",
  "crates/events",
  "crates/gas",
  "crates/governance",
  "crates/ibc",
  "crates/io",
  "crates/light_sdk",
  "crates/macros",
  "crates/migrations",
  "crates/merkle_tree",
  "crates/parameters",
  "crates/proof_of_stake",
  "crates/replay_protection",
  "crates/node",
  "crates/sdk",
  "crates/shielded_token",
  "crates/state",
  "crates/storage",
  "crates/systems",
  "crates/test_utils",
  "crates/tests",
  "crates/token",
  "crates/trans_token",
  "crates/tx",
  "crates/tx_env",
  "crates/tx_prelude",
  "crates/vm",
  "crates/vm_env",
  "crates/vote_ext",
  "crates/vp",
  "crates/vp_env",
  "crates/vp_prelude",
  "crates/wallet",
  "examples",
  "fuzz",
]

# wasm packages have to be built separately
exclude = [
  "wasm",
  "wasm_for_tests",
  "test_fixtures",
]

[workspace.package]
authors = ["Heliax AG <hello@heliax.dev>"]
edition = "2021"
documentation = "https://docs.namada.net/"
homepage = "https://namada.net/"
keywords = ["blockchain", "privacy", "crypto", "protocol", "network"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/anoma/namada"
version = "0.47.1"

[workspace.dependencies]
namada_account = { version = "0.47.1", path = "crates/account" }
namada_apps_lib = { version = "0.47.1", path = "crates/apps_lib" }
namada_controller = { version = "0.47.1", path = "crates/controller" }
namada_core = { version = "0.47.1", path = "crates/core" }
namada_encoding_spec = { version = "0.47.1", path = "crates/encoding_spec" }
namada_ethereum_bridge = { version = "0.47.1", path = "crates/ethereum_bridge" }
namada_events = { version = "0.47.1", path = "crates/events" }
namada_gas = { version = "0.47.1", path = "crates/gas" }
namada_governance = { version = "0.47.1", path = "crates/governance" }
namada_ibc = { version = "0.47.1", path = "crates/ibc" }
namada_io = { version = "0.47.1", path = "crates/io" }
namada_light_sdk = { version = "0.47.1", path = "crates/light_sdk" }
namada_macros = { version = "0.47.1", path = "crates/macros" }
namada_migrations = { version = "0.47.1", path = "crates/migrations" }
namada_merkle_tree = { version = "0.47.1", path = "crates/merkle_tree" }
namada_parameters = { version = "0.47.1", path = "crates/parameters" }
namada_proof_of_stake = { version = "0.47.1", path = "crates/proof_of_stake" }
namada_replay_protection = { version = "0.47.1", path = "crates/replay_protection" }
namada_node = { version = "0.47.1", path = "crates/node" }
namada_sdk = { version = "0.47.1", path = "crates/sdk", default-features = false }
namada_shielded_token = { version = "0.47.1", path = "crates/shielded_token" }
namada_state = { version = "0.47.1", path = "crates/state" }
namada_storage = { version = "0.47.1", path = "crates/storage" }
namada_systems = { version = "0.47.1", path = "crates/systems" }
namada_test_utils = { version = "0.47.1", path = "crates/test_utils" }
namada_tests = { version = "0.47.1", path = "crates/tests" }
namada_token = { version = "0.47.1", path = "crates/token" }
namada_trans_token = { version = "0.47.1", path = "crates/trans_token" }
namada_tx = { version = "0.47.1", path = "crates/tx" }
namada_tx_env = { version = "0.47.1", path = "crates/tx_env" }
namada_tx_prelude = { version = "0.47.1", path = "crates/tx_prelude" }
namada_vm = { version = "0.47.1", path = "crates/vm", default-features = false }
namada_vm_env = { version = "0.47.1", path = "crates/vm_env" }
namada_vote_ext = { version = "0.47.1", path = "crates/vote_ext" }
namada_vp = { version = "0.47.1", path = "crates/vp" }
namada_vp_env = { version = "0.47.1", path = "crates/vp_env" }
namada_vp_prelude = { version = "0.47.1", path = "crates/vp_prelude" }
namada_wallet = { version = "0.47.1", path = "crates/wallet" }

arbitrary = {version = "1.4", features = ["derive"]}
ark-bls12-381 = {version = "0.3"}
ark-serialize = {version = "0.3"}
ark-std = "0.3.0"
arse-merkle-tree = {package = "nam-sparse-merkle-tree", version = "0.3.2-nam.0", default-features = false, features = ["std", "borsh"]}
assert_cmd = "1.0.7"
assert_matches = "1.5.0"
async-trait = {version = "0.1.51"}
base58 = "0.2.0"
base64 = "0.13.0"
bech32 = "0.8.0"
bimap = {version = "0.6.2", features = ["serde"]}
bit-set = "0.5.2"
bitflags = { version = "2.5.0", features = ["serde"] }
blake2b-rs = "0.2.0"
byte-unit = "4.0.13"
byteorder = "1.4.2"
borsh = {version = "1.2.0", features = ["unstable__schema", "derive"]}
cargo_metadata = "0.18.1"
chrono = {version = "0.4.22", default-features = false, features = ["clock", "std"]}
circular-queue = "0.2.6"
clap = "4.5"
clap_complete = "4.5"
clap_complete_nushell = "4.5"
clru = "0.6.2"
color-eyre = "0.6.2"
concat-idents = "1.1.2"
config = "0.14.1"
data-encoding = "2.3.2"
derivation-path = "0.2.0"
derivative = "2.2.0"
directories = "4.0.1"
drain_filter_polyfill = "0.1.3"
dur = "0.5.3"
duration-str = "0.10.0"
ed25519-consensus = "2.1.0"
either = "1.12.0"
escargot = "0.5.7"
ethabi = "18.0.0"
ethbridge-bridge-contract = "0.24.1"
ethbridge-bridge-events = "0.24.1"
ethbridge-events = "0.24.1"
ethbridge-structs = "0.24.1"
ethers = "2.0.0"
expectrl = "0.7.0"
eyre = "0.6.12"
fd-lock = "3.0.12"
flate2 = "1.0.22"
flume = "0.11.1"
fs_extra = "1.2.0"
futures = "0.3"
git2 = { version = "0.18.1", default-features = false }
ibc = { version = "0.57.0", features = ["serde"] }
ibc-derive = "0.10.1"
ibc-middleware-module = { version = "0.2.0" }
ibc-middleware-module-macros = { version = "0.2.0" }
ibc-middleware-overflow-receive = { version = "0.5.0" }
ibc-middleware-packet-forward = { version = "0.10.0", features = ["borsh"] }
ibc-testkit = { version = "0.57.0", default-features = false }
ics23 = "0.12.0"
usize-set = { version = "0.10.3", features = ["serialize-borsh", "serialize-serde"] }
indexmap = { package = "nam-indexmap", version = "2.7.1-nam.0", features = ["borsh-schema", "serde"] }
init-once = "0.6.0"
itertools = "0.12.1"
jubjub = { package = "nam-jubjub", version = "0.10.1-nam.0" }
k256 = { version = "0.13.0", default-features = false, features = ["ecdsa", "pkcs8", "precomputed-tables", "serde", "std"]}
kdam = "0.5.2"
konst = { version = "0.3.8", default-features = false }
lazy_static = "1.4.0"
ledger-lib = { package="nam-ledger-lib", version = "0.1.1-nam.0", default-features = false, features = ["transport_tcp"] }
ledger-namada-rs = { package = "nam-ledger-namada-rs", version = "0.0.1-nam.0" }
ledger-transport = "0.10.0"
ledger-transport-hid = "0.10.0"
libc = "0.2.97"
libloading = "0.7.2"
linkme = "0.3.24"
masp_primitives = { version = "1.2" }
masp_proofs = { version = "1.2", default-features = false, features = ["local-prover"] }
num256 = "0.3.5"
num_cpus = "1.13.0"
num-derive = "0.4"
num-rational = "0.4.1"
num-traits = "0.2.19"
once_cell = "1.8.0"
orion = "0.16.0"
owo-colors = "3.5.0"
paste = "1.0.9"
patricia_tree = "0.8.0"
pretty_assertions = "1.4.0"
primitive-types = "0.13.1"
proptest = "1.4.0"
proptest-state-machine = "0.3.0"
prost = "0.13.1"
prost-types = "0.13.1"
rand = {version = "0.8", default-features = false}
rand_core = {version = "0.6", default-features = false}
rayon = "1.5.3"
regex = "1.10.2"
reqwest = "0.11.4"
ripemd = "0.1"
rlimit = "0.5.4"
rocksdb = {version = "0.22.0", features = ['zstd'], default-features = false}
rpassword = "5.0.1"
rustversion = "1.0"
serde = {version = "1.0.125", features = ["derive"]}
serde_bytes = "0.11.5"
serde_json = "1.0.133"
serde_tuple = "0.5.0"
sha2 = "0.9.3"
sha2-const = "0.1.2"
signal-hook = "0.3.9"
slip10_ed25519 = "0.1.3"
smooth-operator = "0.7.2"
# sysinfo with disabled multithread feature
sysinfo = {version = "0.27.8", default-features = false}
tar = "0.4.37"
tempfile = {version = "3.2.0"}
tendermint = {version = "0.40.1", features = ["secp256k1"]}
tendermint-config = "0.40.1"
tendermint-light-client = "0.40.1"
tendermint-proto = "0.40.1"
tendermint-rpc = {version = "0.40.1", default-features = false}
test-log = {version = "0.2.14", default-features = false, features = ["trace"]}
tiny-bip39 = {version = "2.0"}
tiny-hderive = {package = "nam-tiny-hderive", version = "0.3.1-nam.0"}
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
thiserror = "1.0.38"
tokio = {version = "1.8.2", default-features = false}
tokio-test = "0.4.2"
toml = "0.5.8"
tonic = "0.12.3"
tonic-build = "0.12.3"
tower = "0.4"
tower-abci = "0.18.0"
tracing = "0.1.30"
tracing-appender = "0.2.2"
tracing-log = "0.2.0"
tracing-subscriber = {version = "0.3.7", default-features = false, features = ["env-filter", "fmt"]}
typed-builder = "0.19.1"
wasmparser = "0.107.0"
wasm-instrument = {version = "0.4.0", features = ["sign_ext"]}
wasmer = "4.3.5"
wasmer-cache = "4.3.5"
wasmer-compiler = "4.3.5"
wasmer-compiler-singlepass = "4.3.5"
wasmer-types = "4.3.5"
wasmer-vm = "4.3.5"
wasmtimer = "0.2.0"
winapi = "0.3.9"
xorf = { version = "0.11.0", features = ["serde"] }
yansi = "0.5.1"
zeroize = { version = "1.5.5", features = ["zeroize_derive"] }
zstd = "0.13.2"

[profile.release]
lto = true
opt-level = 3
panic = "unwind"
overflow-checks = true

[profile.dev.package.namada_fuzz]
opt-level = 3
