[package]
name = "namada_account"
description = "Namada user account"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
namada_core = { path = "../core", default-features = false }
namada_macros = { path = "../macros" }
namada_storage = { path = "../storage" }

borsh.workspace = true
serde.workspace = true
