[package]
authors = ["Heliax AG <hello@heliax.dev>"]
description = "Anoma apps"
edition = "2021"
license = "GPL-3.0"
name = "anoma_apps"
readme = "../README.md"
resolver = "2"
version = "0.6.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "anoma_apps"
path = "src/lib/mod.rs"

# Anoma CLI that aggregates some common commands for the node and the client
[[bin]]
doc = false
name = "anoma"
path = "src/bin/anoma/main.rs"

# Anoma node
[[bin]]
doc = false
name = "anoman"
path = "src/bin/anoma-node/main.rs"

# Anoma client
[[bin]]
doc = false
name = "anomac"
path = "src/bin/anoma-client/main.rs"

# Anoma wallet
[[bin]]
doc = false
name = "anomaw"
path = "src/bin/anoma-wallet/main.rs"

[features]
default = ["std", "ABCI"]
dev = ["anoma/dev"]
std = ["ed25519-consensus/std", "rand/std", "rand_core/std"]
# for integration tests and test utilies
ABCI = [
  "tendermint-stable",
  "tendermint-config-abci",
  "tendermint-proto-abci",
  "tendermint-rpc-abci",
  "tower-abci-old",
  "anoma/ABCI",
  "anoma/ibc-vp-abci",
]
ABCI-plus-plus = [
  "tendermint",
  "tendermint-config",
  "tendermint-proto",
  "tendermint-rpc",
  "tower-abci",
  "anoma/ABCI-plus-plus",
  "anoma/ibc-vp",
]
testing = ["dev"]

[dependencies]
anoma = {path = "../shared", default-features = false, features = ["wasm-runtime", "ferveo-tpke", "rand"]}
ark-serialize = "0.3.0"
ark-std = "0.3.0"
async-std = {version = "1.9.0", features = ["unstable"]}
async-trait = "0.1.51"
base64 = "0.13.0"
bech32 = "0.8.0"
blake2b-rs = "0.2.0"
borsh = "0.9.0"
byte-unit = "4.0.13"
byteorder = "1.4.2"
# https://github.com/clap-rs/clap/issues/1037
clap = {git = "https://github.com/clap-rs/clap/", tag = "v3.0.0-beta.2", default-features = false, features = ["std", "suggestions", "color", "cargo"]}
color-eyre = "0.5.10"
config = "0.11.0"
curl = "0.4.43"
derivative = "2.2.0"
directories = "4.0.1"
ed25519-consensus = "1.2.0"
ferveo = {git = "https://github.com/anoma/ferveo"}
ferveo-common = {git = "https://github.com/anoma/ferveo"}
eyre = "0.6.5"
flate2 = "1.0.22"
file-lock = "2.0.2"
futures = "0.3"
hex = "0.4.3"
itertools = "0.10.1"
jsonpath_lib = "0.3.0"
libc = "0.2.97"
libloading = "0.7.2"
libp2p = "0.38.0"
message-io = {version = "0.14.3", default-features = false, features = ["websocket"]}
num-derive = "0.3.3"
num-traits = "0.2.14"
num_cpus = "1.13.0"
once_cell = "1.8.0"
orion = "0.16.0"
pathdiff = "0.2.1"
prost = "0.9.0"
prost-types = "0.9.0"
rand = {version = "0.8", default-features = false}
rand_core = {version = "0.6", default-features = false}
rayon = "=1.5.1"
regex = "1.4.5"
reqwest = "0.11.4"
rlimit = "0.5.4"
rocksdb = {version = "0.18.0", features = ['zstd'], default-features = false}
rpassword = "5.0.1"
serde = {version = "1.0.125", features = ["derive"]}
serde_bytes = "0.11.5"
serde_json = {version = "1.0.62", features = ["raw_value"]}
serde_regex = "1.1.0"
sha2 = "0.9.3"
signal-hook = "0.3.9"
sparse-merkle-tree = {git = "https://github.com/heliaxdev/sparse-merkle-tree", branch = "yuji/ics23_0.7", features = ["borsh"]}
# sysinfo with disabled multithread feature
sysinfo = {version = "=0.21.1", default-features = false}
tar = "0.4.37"
# temporarily using fork work-around
tendermint = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "95c52476bc37927218374f94ac8e2a19bd35bec9", optional = true}
tendermint-config = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "95c52476bc37927218374f94ac8e2a19bd35bec9", optional = true}
tendermint-config-abci = {package = "tendermint-config", git = "https://github.com/heliaxdev/tendermint-rs", branch = "yuji/rebase_v0.23.5", optional = true}
tendermint-proto = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "95c52476bc37927218374f94ac8e2a19bd35bec9", optional = true}
tendermint-proto-abci = {package = "tendermint-proto", git = "https://github.com/heliaxdev/tendermint-rs", branch = "yuji/rebase_v0.23.5", optional = true}
tendermint-rpc = {git = "https://github.com/heliaxdev/tendermint-rs", rev = "95c52476bc37927218374f94ac8e2a19bd35bec9", optional = true, features = ["http-client", "websocket-client"]}
tendermint-rpc-abci = {package = "tendermint-rpc", git = "https://github.com/heliaxdev/tendermint-rs", branch = "yuji/rebase_v0.23.5", optional = true, features = ["http-client", "websocket-client"]}
tendermint-stable = {package = "tendermint", git = "https://github.com/heliaxdev/tendermint-rs", branch = "yuji/rebase_v0.23.5", optional = true}
thiserror = "1.0.30"
tokio = {version = "1.8.2", features = ["full"]}
toml = "0.5.8"
tonic = "0.6.1"
tower = "0.4"
# Also, using the same version of tendermint-rs as we do here.
# with a patch for https://github.com/penumbra-zone/tower-abci/issues/7.
tower-abci = {git = "https://github.com/heliaxdev/tower-abci", rev = "f6463388fc319b6e210503b43b3aecf6faf6b200", optional = true}
tower-abci-old = {package = "tower-abci", git = "https://github.com/heliaxdev/tower-abci", branch = "yuji/rebase_v0.23.5_tracing", optional = true}
tracing = "0.1.34"
tracing-log = "0.1.2"
tracing-subscriber = {version = "0.3.7", features = ["env-filter"]}
websocket = "0.26.2"
winapi = "0.3.9"

[dev-dependencies]
anoma = {path = "../shared", default-features = false, features = ["testing", "wasm-runtime"]}
cargo-watch = "7.5.0"
bit-set = "0.5.2"
# A fork with state machime testing
proptest = {git = "https://github.com/heliaxdev/proptest", branch = "tomas/sm"}
tempfile = "3.2.0"
test-log = {version = "0.2.7", default-features = false, features = ["trace"]}
tokio-test = "0.4.2"

[build-dependencies]
git2 = "0.13.25"
tonic-build = "0.6.0"
