[package]
authors = ["Heliax AG <hello@heliax.dev>"]
description = "Namada apps"
edition = "2021"
license = "GPL-3.0"
name = "namada_apps"
readme = "../README.md"
resolver = "2"
version = "0.13.1"
default-run = "namada"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "namada_apps"
path = "src/lib/mod.rs"

# Namada CLI that aggregates some common commands for the node and the client
[[bin]]
doc = false
name = "namada"
path = "src/bin/namada/main.rs"

# Namada node
[[bin]]
doc = false
name = "namadan"
path = "src/bin/namada-node/main.rs"

# Namada client
[[bin]]
doc = false
name = "namadac"
path = "src/bin/namada-client/main.rs"

# Namada wallet
[[bin]]
doc = false
name = "namadaw"
path = "src/bin/namada-wallet/main.rs"

[features]
default = ["std", "abciplus"]
mainnet = [
  "namada/mainnet",
]
dev = ["namada/dev"]
std = ["ed25519-consensus/std", "rand/std", "rand_core/std"]
# for integration tests and test utilies
testing = ["dev"]

abcipp = [
    "namada/abcipp",
    "namada/tendermint-rpc-abcipp",
    "tendermint-abcipp",
    "tendermint-config-abcipp",
    "tendermint-proto-abcipp",
    "tendermint-rpc-abcipp",
    "tower-abci-abcipp",
]

abciplus = [
    "namada/abciplus",
    "namada/tendermint-rpc",
    "tendermint",
    "tendermint-config",
    "tendermint-rpc",
    "tendermint-proto",
    "tower-abci",
]

[dependencies]
namada = {path = "../shared", default-features = false, features = ["wasm-runtime", "ferveo-tpke"]}
ark-serialize = "0.3.0"
ark-std = "0.3.0"
# branch = "bat/arse-merkle-tree"
arse-merkle-tree = {package = "sparse-merkle-tree", git = "https://github.com/heliaxdev/sparse-merkle-tree", rev = "04ad1eeb28901b57a7599bbe433b3822965dabe8", features = ["std", "borsh"]}
async-std = {version = "=1.11.0", features = ["unstable"]}
async-trait = "0.1.51"
base64 = "0.13.0"
bech32 = "0.8.0"
blake2b-rs = "0.2.0"
borsh = "0.9.0"
byte-unit = "4.0.13"
byteorder = "1.4.2"
# https://github.com/clap-rs/clap/issues/1037
clap = {git = "https://github.com/clap-rs/clap/", tag = "v3.0.0-beta.2", default-features = false, features = ["std", "suggestions", "color", "cargo"]}
color-eyre = "0.5.10"
config = "0.11.0"
data-encoding = "2.3.2"
derivative = "2.2.0"
ed25519-consensus = "1.2.0"
ferveo = {git = "https://github.com/anoma/ferveo"}
ferveo-common = {git = "https://github.com/anoma/ferveo"}
eyre = "0.6.5"
flate2 = "1.0.22"
file-lock = "2.0.2"
futures = "0.3"
itertools = "0.10.1"
libc = "0.2.97"
libloading = "0.7.2"
num-derive = "0.3.3"
num-traits = "0.2.14"
num_cpus = "1.13.0"
once_cell = "1.8.0"
orion = "0.16.0"
prost = "0.9.0"
prost-types = "0.9.0"
rand = {version = "0.8", default-features = false}
rand_core = {version = "0.6", default-features = false}
rayon = "=1.5.3"
regex = "1.4.5"
reqwest = "0.11.4"
rlimit = "0.5.4"
rocksdb = {version = "0.19.0", features = ['zstd', 'jemalloc'], default-features = false}
rpassword = "5.0.1"
serde = {version = "1.0.125", features = ["derive"]}
serde_bytes = "0.11.5"
serde_json = {version = "1.0.62", features = ["raw_value"]}
sha2 = "0.9.3"
signal-hook = "0.3.9"
# sysinfo with disabled multithread feature
sysinfo = {version = "=0.21.1", default-features = false}
tar = "0.4.37"
# temporarily using fork work-around
tendermint-abcipp = {package = "tendermint", git = "https://github.com/heliaxdev/tendermint-rs", rev = "95c52476bc37927218374f94ac8e2a19bd35bec9", optional = true}
tendermint-config-abcipp = {package = "tendermint-config", git = "https://github.com/heliaxdev/tendermint-rs", rev = "95c52476bc37927218374f94ac8e2a19bd35bec9", optional = true}
tendermint-proto-abcipp = {package = "tendermint-proto", git = "https://github.com/heliaxdev/tendermint-rs", rev = "95c52476bc37927218374f94ac8e2a19bd35bec9", optional = true}
tendermint-rpc-abcipp = {package = "tendermint-rpc", git = "https://github.com/heliaxdev/tendermint-rs", rev = "95c52476bc37927218374f94ac8e2a19bd35bec9", features = ["http-client", "websocket-client"], optional = true}
tendermint = {version = "0.23.6", optional = true}
tendermint-config = {version = "0.23.6", optional = true}
tendermint-proto = {version = "0.23.6", optional = true}
tendermint-rpc = {version = "0.23.6", features = ["http-client", "websocket-client"], optional = true}
thiserror = "1.0.30"
tokio = {version = "1.8.2", features = ["full"]}
toml = "0.5.8"
tonic = "0.6.1"
tower = "0.4"
# Also, using the same version of tendermint-rs as we do here.
# with a patch for https://github.com/penumbra-zone/tower-abci/issues/7.
tower-abci-abcipp = {package = "tower-abci", git = "https://github.com/heliaxdev/tower-abci", rev = "f6463388fc319b6e210503b43b3aecf6faf6b200", optional = true}
tower-abci = {version = "0.1.0", optional = true}
tracing = "0.1.30"
tracing-log = "0.1.2"
tracing-subscriber = {version = "0.3.7", features = ["env-filter", "json"]}
websocket = "0.26.2"
winapi = "0.3.9"
#libmasp = { git = "https://github.com/anoma/masp", branch = "murisi/masp-incentive" }
masp_primitives = { git = "https://github.com/anoma/masp", rev = "bee40fc465f6afbd10558d12fe96eb1742eee45c", features = ["transparent-inputs"] }
masp_proofs = { git = "https://github.com/anoma/masp", rev = "bee40fc465f6afbd10558d12fe96eb1742eee45c", features = ["bundled-prover", "download-params"] }
bimap = {version = "0.6.2", features = ["serde"]}
rust_decimal = "1.26.1"
rust_decimal_macros = "1.26.1"

[dev-dependencies]
namada = {path = "../shared", default-features = false, features = ["testing", "wasm-runtime"]}
bit-set = "0.5.2"
# A fork with state machime testing
proptest = {git = "https://github.com/heliaxdev/proptest", branch = "tomas/sm"}
tempfile = "3.2.0"
test-log = {version = "0.2.7", default-features = false, features = ["trace"]}
tokio-test = "0.4.2"

[build-dependencies]
git2 = "0.13.25"
